--- a/spread.yaml
+++ b/spread.yaml
@@ -817,23 +817,23 @@ suites:
         environment:
             NESTED_TYPE: "classic"
             # Channel used to create the nested vm
-            NESTED_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_CHANNEL: '$(HOST: echo "${NESTED_CORE_CHANNEL:-edge}")'
             # Channel used to refresh when testing refresh and revert
-            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_REFRESH_CHANNEL:-edge}")'
+            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${NESTED_CORE_REFRESH_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_NESTED_USE_CLOUD_INIT:-true}")'
+            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${NESTED_USE_CLOUD_INIT:-true}")'
             # Enable kvm in the qemu command line
-            NESTED_ENABLE_KVM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_KVM:-true}")'
+            NESTED_ENABLE_KVM: '$(HOST: echo "${NESTED_ENABLE_KVM:-true}")'
             # Enable tpm in the nested vm in case it is supported
-            NESTED_ENABLE_TPM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_TPM:-false}")'
+            NESTED_ENABLE_TPM: '$(HOST: echo "${NESTED_ENABLE_TPM:-false}")'
             # Enable secure boot in the nested vm in case it is supported
-            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_NESTED_ENABLE_SECURE_BOOT:-false}")'
+            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${NESTED_ENABLE_SECURE_BOOT:-false}")'
             # Build and use snapd from current branch
-            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
+            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
             # Download and use an custom image from this url
-            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_NESTED_CUSTOM_IMAGE_URL:-}")'
+            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${NESTED_CUSTOM_IMAGE_URL:-}")'
             # Directory where the images and test assets are stored
-            NESTED_WORK_DIR: '$(HOST: echo "${SPREAD_NESTED_WORK_DIR:-/tmp/work-dir}")'
+            NESTED_WORK_DIR: '$(HOST: echo "${NESTED_WORK_DIR:-/tmp/work-dir}")'
         manual: true
         kill-timeout: 40m
         debug: |
@@ -872,23 +872,23 @@ suites:
         environment:
             NESTED_TYPE: "classic"
             # Channel used to create the nested vm
-            NESTED_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_CHANNEL: '$(HOST: echo "${NESTED_CORE_CHANNEL:-edge}")'
             # Channel used to refresh when testing refresh and revert
-            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_REFRESH_CHANNEL:-edge}")'
+            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${NESTED_CORE_REFRESH_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_NESTED_USE_CLOUD_INIT:-true}")'
+            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${NESTED_USE_CLOUD_INIT:-true}")'
             # Enable kvm in the qemu command line
-            NESTED_ENABLE_KVM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_KVM:-true}")'
+            NESTED_ENABLE_KVM: '$(HOST: echo "${NESTED_ENABLE_KVM:-true}")'
             # Enable tpm in the nested vm in case it is supported
-            NESTED_ENABLE_TPM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_TPM:-false}")'
+            NESTED_ENABLE_TPM: '$(HOST: echo "${NESTED_ENABLE_TPM:-false}")'
             # Enable secure boot in the nested vm in case it is supported
-            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_NESTED_ENABLE_SECURE_BOOT:-false}")'
+            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${NESTED_ENABLE_SECURE_BOOT:-false}")'
             # Build and use snapd from current branch
-            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
+            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
             # Download and use an custom image from this url
-            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_NESTED_CUSTOM_IMAGE_URL:-}")'
+            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${NESTED_CUSTOM_IMAGE_URL:-}")'
             # Directory where the images and test assets are stored
-            NESTED_WORK_DIR: '$(HOST: echo "${SPREAD_NESTED_WORK_DIR:-/tmp/work-dir}")'
+            NESTED_WORK_DIR: '$(HOST: echo "${NESTED_WORK_DIR:-/tmp/work-dir}")'
         manual: true
         debug: |
             #shellcheck source=tests/lib/nested.sh
@@ -931,23 +931,23 @@ suites:
         environment:
             NESTED_TYPE: "core"
             # Channel used to create the nested vm
-            NESTED_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_CHANNEL: '$(HOST: echo "${NESTED_CORE_CHANNEL:-edge}")'
             # Channel used to refresh when testing refresh and revert
-            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_REFRESH_CHANNEL:-edge}")'
+            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${NESTED_CORE_REFRESH_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_NESTED_USE_CLOUD_INIT:-true}")'
+            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${NESTED_USE_CLOUD_INIT:-true}")'
             # Enable kvm in the qemu command line
-            NESTED_ENABLE_KVM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_KVM:-true}")'
+            NESTED_ENABLE_KVM: '$(HOST: echo "${NESTED_ENABLE_KVM:-true}")'
             # Enable tpm in the nested vm in case it is supported
-            NESTED_ENABLE_TPM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_TPM:-false}")'
+            NESTED_ENABLE_TPM: '$(HOST: echo "${NESTED_ENABLE_TPM:-false}")'
             # Enable secure boot in the nested vm in case it is supported
-            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_NESTED_ENABLE_SECURE_BOOT:-false}")'
+            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${NESTED_ENABLE_SECURE_BOOT:-false}")'
             # Build and use snapd from current branch
-            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
+            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
             # Download and use an custom image from this url
-            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_NESTED_CUSTOM_IMAGE_URL:-}")'
+            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${NESTED_CUSTOM_IMAGE_URL:-}")'
             # Directory where the images and test assets are stored
-            NESTED_WORK_DIR: '$(HOST: echo "${SPREAD_NESTED_WORK_DIR:-/tmp/work-dir}")'
+            NESTED_WORK_DIR: '$(HOST: echo "${NESTED_WORK_DIR:-/tmp/work-dir}")'
         manual: true
         debug: |
             #shellcheck source=tests/lib/nested.sh
@@ -990,23 +990,23 @@ suites:
         environment:
             NESTED_TYPE: "core"
             # Channel used to create the nested vm
-            NESTED_CORE_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_CHANNEL:-edge}")'
+            NESTED_CORE_CHANNEL: '$(HOST: echo "${NESTED_CORE_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${SPREAD_NESTED_CORE_REFRESH_CHANNEL:-edge}")'
+            NESTED_CORE_REFRESH_CHANNEL: '$(HOST: echo "${NESTED_CORE_REFRESH_CHANNEL:-edge}")'
             # Use cloud init to make initial system configuration instead of user assertion
-            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${SPREAD_NESTED_USE_CLOUD_INIT:-true}")'
+            NESTED_USE_CLOUD_INIT: '$(HOST: echo "${NESTED_USE_CLOUD_INIT:-true}")'
             # Enable kvm in the qemu command line
-            NESTED_ENABLE_KVM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_KVM:-false}")'
+            NESTED_ENABLE_KVM: '$(HOST: echo "${NESTED_ENABLE_KVM:-false}")'
             # Enable secure boot in the nested vm in case it is supported
-            NESTED_ENABLE_TPM: '$(HOST: echo "${SPREAD_NESTED_ENABLE_TPM:-true}")'
+            NESTED_ENABLE_TPM: '$(HOST: echo "${NESTED_ENABLE_TPM:-true}")'
             # Enable secure boot in the nested vm in case it is supported
-            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${SPREAD_NESTED_ENABLE_SECURE_BOOT:-true}")'
+            NESTED_ENABLE_SECURE_BOOT: '$(HOST: echo "${NESTED_ENABLE_SECURE_BOOT:-true}")'
             # Build and use snapd from current branch
-            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${SPREAD_NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
+            NESTED_BUILD_SNAPD_FROM_CURRENT: '$(HOST: echo "${NESTED_BUILD_SNAPD_FROM_CURRENT:-true}")'
             # Download and use an custom image from this url
-            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${SPREAD_NESTED_CUSTOM_IMAGE_URL:-}")'
+            NESTED_CUSTOM_IMAGE_URL: '$(HOST: echo "${NESTED_CUSTOM_IMAGE_URL:-}")'
             # Directory where the images and test assets are stored
-            NESTED_WORK_DIR: '$(HOST: echo "${SPREAD_NESTED_WORK_DIR:-/tmp/work-dir}")'
+            NESTED_WORK_DIR: '$(HOST: echo "${NESTED_WORK_DIR:-/tmp/work-dir}")'
         manual: true
         debug: |
             #shellcheck source=tests/lib/nested.sh
